# Shano_opacity_study_tmp_revisitpy-examples-main-02

./: README.md  pyproject.toml
example_expanding_html_study/: example_expanding_html_study.ipynb
example_jnd_study/: example_jnd_study.ipynb
example_jnd_study/assets/: introduction.md
example_simple_html/: config.json  example_simple_html.ipynb
example_simple_html/assets/: bar-chart-interaction.html  data.csv
mdoutput/: conf.json  index.md.j2
opacity_study/: config.json
opacity_study/assets/: introduction.md
