[project]
name = "revisit-py-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=5.5.0",
    "jupyter>=1.1.1",
    "revisitpy>=0.1.0",
    "revisitpy-server>=0.1.1",
    "scipy>=1.15.1",
    "vega>=4.1.0",
]
